test/scripted/compilation2/errors/use_after_move.bnj
# test:common

struct Resource {
    func __deinit__(self) {}
}

# test:subtest
# test:error 14:13 "resource used after move"
# test:note 13:13 "previously moved here"

func main() {
    var a = Resource {};
    var b = a;
    var c = a;
}

# test:subtest
# test:error 29:13 "resource used after move"
# test:note 26:17 "previously moved in conditional branch here"

func main() {
    var a = Resource {};
    var flag = true;
    
    if flag {
        var b = a;
    }
    
    var c = a;
}

# test:subtest
# test:error 42:17 "resource used after move"
# test:note 41:17 "previously moved here"

func main() {
    var a = Resource {};
    var flag = true;
    
    if flag {
        var b = a;
        var c = a;
    }    
}

# test:subtest
# test:error 57:13 "resource used after move"
# test:note 56:13 "previously moved partially here"

func main() {
    var a = (
        Resource {},
        Resource {},
    );
    
    var b = a.0;
    var c = a;
}

# test:subtest
# test:error 77:13 "resource used after move"
# test:note 74:17 "previously moved partially in conditional branch here"

func main() {
    var a = (
        Resource {},
        Resource {},
    );
    
    var flag = true;
    
    if flag {
    } else {
        var b = a.0;
    }
    
    var c = a;
}